# asmm-simulator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
outputs/: gamma_0.01_table.csv  gamma_0.1_table.csv  gamma_0.5_table.csv  summary.csv
src/asmm_simulator/: __main__.py  experiment.py  models.py  plots.py  sim.py
tests/: test_models.py  test_sim.py
